--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -81,7 +81,7 @@ jobs:
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        [ -e $NET ] && mv $CONFIG_FILE openwrt/package/base-files/files/etc/board.d/99-default_network
+        [ -e $NET ] && mv $NET openwrt/package/base-files/files/etc/board.d/99-default_network
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
