--- a/1.config
+++ b/1.config
@@ -5058,7 +5058,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Dns2socks=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin is not set
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple-obfs=y
 # end of Configuration
 
