--- a/.github/workflows/build-openwrt-21.02.yml
+++ b/.github/workflows/build-openwrt-21.02.yml
@@ -61,6 +61,7 @@ jobs:
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
+        sudo chown -R $USER:$GROUPS /workdir/openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Load custom feeds
