--- a/.github/workflows/build-imwrt-18.06.yml
+++ b/.github/workflows/build-imwrt-18.06.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   FEEDS_CONF: feeds.conf.default
+  CONFIG_FILE: 2.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: true
@@ -59,7 +60,6 @@ jobs:
     - name: Build
       run: |
         cd "/home/runner/openwrt"
-        cp -f "${GITHUB_WORKSPACE}/2.config" ".config"
         make defconfig
         make -j$(nproc) || make -j1 || make -j1 V=s
         echo "::set-output name=status::success"
