--- a/.github/workflows/build-imwrt-21.02.yml
+++ b/.github/workflows/build-imwrt-21.02.yml
@@ -194,7 +194,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: ${{ steps.tag.outputs.release_tag }} immortalwrt
+        name: ${{ steps.tag.outputs.release_tag }} immortalwrt 21.02
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
