--- a/.github/workflows/build-openwrt-r2s.yml
+++ b/.github/workflows/build-openwrt-r2s.yml
@@ -128,6 +128,13 @@ jobs:
       with:
         name: OpenWrt_base${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: openwrt/bin/packages/arm_cortex-a7_neon-vfpv4/base
+
+    - name: Upload .config
+      uses: actions/upload-artifact@main
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+      with:
+        name: OpenWrt_base${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: openwrt/.config
         
     - name: Organize files
       id: organize
@@ -146,14 +153,14 @@ jobs:
         echo "BASE=$PWD" >> $GITHUB_ENV
         echo "::set-output name=status::success"
 
-    - name: Upload base to cowtransfer
-      id: cowtransferbase
-      if: steps.organize.outputs.status == 'success' && env.UPLOAD_COWTRANSFER == 'true' && !cancelled()
-      run: |
-        curl -fsSL git.io/file-transfer | sh
-        ./transfer cow --block 2621440 -s -p 64 --no-progress ${BASE} 2>&1 | tee cowtransfer2.log
-        echo "::warning file=cowtransfer.com::$(cat cowtransfer2.log | grep https)"
-        echo "::set-output name=url::$(cat cowtransfer2.log | grep https | cut -f3 -d" ")"
+    # - name: Upload base to cowtransfer
+    #   id: cowtransferbase
+    #   if: steps.organize.outputs.status == 'success' && env.UPLOAD_COWTRANSFER == 'true' && !cancelled()
+    #   run: |
+    #     curl -fsSL git.io/file-transfer | sh
+    #     ./transfer cow --block 2621440 -s -p 64 --no-progress ${BASE} 2>&1 | tee cowtransfer2.log
+    #     echo "::warning file=cowtransfer.com::$(cat cowtransfer2.log | grep https)"
+    #     echo "::set-output name=url::$(cat cowtransfer2.log | grep https | cut -f3 -d" ")"
 
     - name: Upload base to WeTransfer
       id: wetransferbase
