--- a/.github/workflows/build-openwrt-r2s.yml
+++ b/.github/workflows/build-openwrt-r2s.yml
@@ -127,18 +127,11 @@ jobs:
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
         name: OpenWrt_base${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
-        path: openwrt/bin/packages/arm_cortex-a7_neon-vfpv4/base
+        path: openwrt/bin/packages/*/base
 
     - name: do .config
       run: |
-        [ -e "openwrt/.config" ] && cp -f openwrt/.config openwrt/config.txt
-
-    - name: Upload .config
-      uses: actions/upload-artifact@main
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
-      with:
-        name: OpenWrt_base${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
-        path: openwrt/config.txt
+        [ -e "openwrt/.config" ] && cp -f openwrt/.config openwrt/bin/targets/*/*/.config
         
     - name: Organize files
       id: organize
